--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SignPost"
         android:usesCleartextTraffic="true">
+        <activity android:name=".ui.attendance.AttendanceActivity" />
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true">
@@ -25,9 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service
-                android:name=".firebase.service.FirebaseCloudMessage"
-                android:exported="false">
+            android:name=".firebase.service.FirebaseCloudMessage"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
